# SpecStoryTDD

./: .gitignore  README.md  pyproject.toml
data/samples/: openapi_login.json  user_story_login.md
docs/: architecture.md
specstory.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
specstory/backend/: main.py
specstory/backend/services/: aligner.py  llm_service.py  parser.py
specstory/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
specstory/frontend/src/: App.js  App.jsx  index.css  main.jsx
specstory/frontend/src/components/: AnalysisStatus.jsx  FileUploader.jsx  ResultsViewer.jsx
src/backend/: __init__.py  api.py  config.py  engine.py  models.py
tests/: test_api.py  test_engine.py
